UI second commit

--- a/src/windowmanager.kv
+++ b/src/windowmanager.kv
@@ -139,7 +139,7 @@
     name: "login_screen"
     LoginWindow:
 
-<ProfileWindow>:
+<SelectWindow>:
     orientation: "vertical"
     #tiCourses: courses
     #tiAge: age
@@ -193,6 +193,6 @@
 
 
 
-<ProfileScreen>:
+<SelectScreen>:
     name: "profile_screen"
-    ProfileWindow:
+    SelectWindow:
