--- a/src/windowmanager.kv
+++ b/src/windowmanager.kv
@@ -1,11 +1,17 @@
 <SelectableLabel>:
-    # Draw a background to indicate selection
     canvas.before:
         Color:
             rgba: (.0, 0.9, .1, .3) if self.selected else (0, 0, 0, 1)
         Rectangle:
             pos: self.pos
             size: self.size
+
+<MyLabel@ButtonBehavior+Label>:
+    text_size: self.size
+    valign: 'middle'
+    halign: 'center'
+    font_size: '13sp'
+    color: 0, 0, 0, 1
 
 <RegisterWindow>:
     orientation: "vertical"
@@ -36,7 +42,7 @@
         size_hint_y: None
         height: "40dp"
         TextInput:
-            input_filter: 'string'
+            #input_filter: 'string'
             id: username
             hint_text: "Username"
             multiline: False
@@ -45,7 +51,7 @@
         size_hint_y: None
         height: "40dp"
         TextInput:
-            input_filter: 'string'
+            #input_filter: 'string'
             id: email
             hint_text: "Email Address"
             multiline: False
@@ -54,7 +60,7 @@
         size_hint_y: None
         height: "40dp"
         TextInput:
-            input_filter: 'string'
+            #input_filter: 'string'
             id: password
             hint_text: "Password"
             multiline: False
@@ -64,7 +70,7 @@
         size_hint_y: None
         height: "40dp"
         TextInput:
-            input_filter: 'string'
+            #input_filter: 'string'
             id: confirm_password
             hint_text: "Confirm Password"
             multiline: False
@@ -80,9 +86,8 @@
             font_size: 20
             background_color: 0,0,1,1
             size_hint: .2, .1
-            #on_press: root.submit()
-            on_release:
-                app.switchScreenSelect()
+            on_press: self.parent.parent.submitUser(app)
+
 
 <RegisterScreen>:
     name: "register_screen"
@@ -117,7 +122,7 @@
         size_hint_y: None
         height: "40dp"
         TextInput:
-            input_filter: 'string'
+            #input_filter: 'str'
             id: username
             hint_text: "Username"
             multiline: False
@@ -126,7 +131,7 @@
         size_hint_y: None
         height: "40dp"
         TextInput:
-            input_filter: 'string'
+            #input_filter: 'string'
             id: password
             hint_text: "Password"
             multiline: False
@@ -142,13 +147,13 @@
             font_size: 20
             background_color: 0,0,1,1
             size_hint: .2, .1
-            on_release: app.switchScreenHome()
+            on_press: self.parent.parent.submitUser(app)
     BoxLayout:
         orientation: "vertical"
         height: "40dp"
-        SelectableLabel:
+        MyLabel:
             text: "Don't have an account? Create one now!"
-            #select_with_touch:
+            on_press: app.switchScreenRegister(app)
 
 <LoginScreen>:
     name: "login_screen"
@@ -186,6 +191,7 @@
             font_size: 20
             background_color: 0,0,1,1
             size_hint: .2, .1
+            on_release: app.switchScreenClasses()
     BoxLayout:
         orientation: "vertical"
         Label:
@@ -350,3 +356,18 @@
 <HomeScreen>:
     name: "Home_screen"
     HomeWindow:
+
+<QuestionsWindow>:
+    id: questions_window
+    orientation: "vertical"
+    spacing: 10
+    padding: 80
+    canvas.before:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            source: "images/batman.jpg"
+
+<QuestionsScreen>:
+    name: "Questions_screen"
+    QuestionsWindow:
