--- a/src/windowmanager.kv
+++ b/src/windowmanager.kv
@@ -6,6 +6,14 @@
             pos: self.pos
             size: self.size
 
+<SelectableLabelAnswer>:
+    canvas.before:
+        Color:
+            rgba: (.0, 0.9, .1, .3) if self.selected else (0, 0, 0, 1)
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
 <MyLabel@ButtonBehavior+Label>:
     text_size: self.size
     valign: 'middle'
@@ -345,13 +353,7 @@
     BoxLayout:
         size_hint_y: None
         height: "20dp"
-        Button:
-            pos_hint: {'center_x': 0.5}
-            text: "Learn it"
-            font_size: 20
-            background_color: 0,0,1,1
-            size_hint: .2, .1
-            on_press: app.switchScreenQuestions(app)
+
     HomeList:
 
 <HomeScreen>:
@@ -360,7 +362,7 @@
 
 <AnswersList>:
     orientation: "vertical"
-    viewclass: 'SelectableLabel'
+    viewclass: 'SelectableLabelAnswer'
     SelectableRecycleBoxLayout:
         spacing: 10
         padding: 80
@@ -388,7 +390,7 @@
         height: "40dp"
         orientation: "vertical"
         Label:
-            text: root.question
+            text: root.parent.question
             bold: True
             font_size: 32
     AnswersList:
@@ -398,3 +400,37 @@
 <QuestionsScreen>:
     name: "Questions_screen"
     QuestionsWindow:
+
+<ResultWindow>:
+    id: questions_window
+    orientation: "vertical"
+    spacing: 10
+    padding: 80
+    canvas.before:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            source: "images/batman.jpg"
+    BoxLayout:
+        orientation: "vertical"
+        Label:
+            text: "result: "
+            bold: True
+            font_size: 32
+        Label:
+            text: str(app.points)
+            bold: True
+            font_size: 32
+    BoxLayout:
+        orientation: "vertical"
+        Button:
+            pos_hint: {'center_x': 0.5}
+            text: "Back to Home"
+            font_size: 20
+            background_color: 0,0,1,1
+            size_hint: .2, .1
+            on_press: app.switchScreenHome(app)
+
+<ResultScreen>:
+    name: "Result_screen"
+    ResultWindow:
